# tools

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CHANGELOG.md  Cargo.toml  README.md  USAGE.md  build.rs  publish.sh  tests.sh
new_project/: Cargo.toml  amethyst
new_project/resources/: config.yml
src/: args.rs  cargo.rs  cmd_build.rs  cmd_clean.rs  cmd_module.rs  cmd_new.rs  cmd_publish.rs  cmd_run.rs  cmds.rs  error.rs  features.rs  fetch.rs  flag_version.rs  gen.rs  lib.rs  main.rs  new.rs  project.rs  templates.rs  valid.rs
src/cargo/: error.rs  manifest.rs  mod.rs  wrapper.rs
src/cli/: README.md  cargo.rs  features.rs  main.rs  project.rs
src/cli/subcmds/: add.rs  amethyst_args.rs  build.rs  clean.rs  deploy.rs  mod.rs  module.rs  new.rs  remove.rs  run.rs  shard.rs  test.rs
src/subcmds/: build.rs  clean.rs  deploy.rs  mod.rs  module.rs  new.rs  run.rs
template/: Cargo.toml  index.ron
template/src/: main.rs
templates/0.10.0/: index.ron
templates/0.10.0/main/src/: main.rs.gdpu
templates/0.10.0/project/src/: main.rs.gdpu
templates/0.11.0/: index.ron
templates/0.11.0/main/: Cargo.toml.gdpu
templates/0.11.0/main/src/: main.rs.gdpu
templates/0.11.0/project/: Cargo.toml.gdpu
templates/0.12.0/main/: Cargo.toml.gdpu
templates/0.12.0/main/src/: main.rs.gdpu
templates/0.13.2/: index.ron
templates/0.13.2/main/: README.md.gdpu
templates/0.13.2/main/src/: main.rs.gdpu
templates/0.14.0/main/src/: main.rs.gdpu
templates/0.15.0/: index.ron
templates/0.15.0/main/: README.md.gdpu
templates/0.15.0/main/config/: display.ron.gdpu
templates/0.15.0/main/src/: main.rs.gdpu
templates/0.6.0/: index.ron
templates/0.6.0/main/src/: main.rs.gdpu
templates/0.6.0/project/: Cargo.toml.gdpu
templates/0.7.0/main/src/: main.rs
templates/0.7.0/project/src/: main.rs.gdpu
templates/0.8.0/main/resources/: display_config.ron.gdpu
templates/0.8.0/project/src/: main.rs.gdpu
templates/v0.6/: __Cargo__.toml
templates/v0.6/resources/: display_config.ron
templates/v0.6/src/: main.rs
test/: amethyst_cli.rs
