[package]
name = "amethyst_tools"
version = "0.8.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Game development tools for the Amethyst engine"
keywords = ["game", "engine", "tool", "editor", "amethyst"]
edition = "2018"
build = "build.rs"

repository = "https://github.com/amethyst/amethyst_tools"

readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "amethyst_cli"
path = "src/lib.rs"

[[bin]]
name = "amethyst"
path = "src/main.rs"

[dependencies]
ansi_term = "0.11.0"
clap = "2.33.0"
env_proxy = "0.3.1"
error-chain = "0.12.1"
liquid = "0.18.2"
regex = "1.1.7"
reqwest = "0.9.18"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"

[dependencies.semver]
features = ["serde"]
version = "0.9.0"

[build-dependencies]
ron = "0.5.1"
walkdir = "2.2.8"
